@@ -79,7 +79,7 @@ void SaveChatList::saveChats( QDataStream* stream )
 
   qint32 num_of_chats = ChatManager::instance().constChatList().count();
   quint64 file_pos = stream->device()->pos();
- (*stream) << num_of_chats;
+  (*stream) << num_of_chats;
 
   QString chat_footer = QString( "<font color=gray><b>*** %1 %2 ***</b></font><br />" ).arg( QObject::tr( "Saved in" ) ).arg( QDateTime::currentDateTime().toString( Qt::SystemLocaleShortDate ) );
   QStringList chat_lines;
@@ -93,7 +93,7 @@ void SaveChatList::saveChats( QDataStream* stream )
       continue;
     qDebug() << "Saving chat" << c.name();
     chat_counter++;
-    chat_name_encrypted = Protocol::instance().simpleEncryptDecrypt( c.name() );
+    chat_name_encrypted = Settings::instance().simpleEncryptDecrypt( c.name() );
     (*stream) << chat_name_encrypted;
     QString html_text = GuiChatMessage::chatToHtml( c, true );
 
@@ -125,7 +125,7 @@ void SaveChatList::saveChats( QDataStream* stream )
       html_text.append( "<br />" ); // SkipEmptyParts remove the last one too
     }
 
-    chat_text_encrypted = Protocol::instance().simpleEncryptDecrypt( html_text );
+    chat_text_encrypted = Settings::instance().simpleEncryptDecrypt( html_text );
     (*stream) << chat_text_encrypted;
   }
 
@@ -134,9 +134,9 @@ void SaveChatList::saveChats( QDataStream* stream )
   {
     qDebug() << "Saving stored chat" << it.key();
     chat_counter++;
-    chat_name_encrypted = Protocol::instance().simpleEncryptDecrypt( it.key() );
+    chat_name_encrypted = Settings::instance().simpleEncryptDecrypt( it.key() );
     (*stream) << chat_name_encrypted;
-    chat_text_encrypted = Protocol::instance().simpleEncryptDecrypt( it.value() );
+    chat_text_encrypted = Settings::instance().simpleEncryptDecrypt( it.value() );
     (*stream) << chat_text_encrypted;
     ++it;
   }
